added description in readme and removed unused code

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-/target/
-.project
-.classpath
-/bin/
-.settings
+*.class
+*.jar
+*.war
+*.ear
+bin/
+out/
+*.iml
+.idea/
+.vscode/
+*.classpath
+*.project
+*.settings/
+.DS_Store
+Thumbs.db
+*.log
+*.tmp
+*.env
